buildscript {
	repositories {
		mavenCentral()
		gradlePluginPortal()
	}
	dependencies {
		classpath 'org.xtext:xtext-gradle-plugin:4.0.0'
	}
}

subprojects {
	ext.xtextVersion = '2.33.0'
	ext.junitVersion = '4.13.2'
	ext.tyrusVersion = '1.18'
	ext.wsVersion = '3.3.0'
	ext.lsp4jWebsocketVersion = '0.21.1'
	ext.slf4jVersion = "1.7.36"
	repositories {
		mavenCentral()
	}

	apply plugin: 'java-library'
	dependencies {
		api platform("org.eclipse.xtext:xtext-dev-bom:${xtextVersion}")
	}

	apply plugin: 'org.xtext.xtend'
	apply from: "${rootDir}/gradle/source-layout.gradle"
	apply plugin: 'eclipse'

	group = 'reva'
	version = '1.0.0-SNAPSHOT'

	java {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
	}

	configurations.all {
		exclude group: 'asm'
	}
}
